--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue-flash-message": "^0.7.2",
     "vue-scrollto": "^2.20.0",
     "vue-simple-alert": "^1.1.1",
-    "vue-tour": "git+https://github.com/aribornstein/vue-tour.git",
+    "vue-tour": "git+https://github.com/ariecattan/vue-tour.git",
     "vue-tree-list": "git+https://github.com/ariecattan/vue-tree-list.git",
     "vued3tree": "^5.1.0",
     "vuetify": "^2.3.6"
